# Shell_ai_evse

./: .flake8  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/actions/load-var-file/: action.yml
.github/variables/: variables.shared.yml
.github/workflows/: main.yml
evse/: __init__.py  const.py  main_script.py
evse/scoring/: __init__.py  _submission.py
tests/: __init__.py  test_evse.py
tests/scoring/: test__submission.py
tests/test_data/: demand_supply_matrix_2020.csv  fast_charging_stations_on_supply_point_matrix_2019.csv  slow_charging_stations_on_supply_point_matrix_2020.csv
